--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		<title>Indivisible TN-3</title>
 	</head>
 	<body>
-		Under construction
+		<a href="https://groups.google.com/forum/#!forum/indivisibletn3">Google Group</a>
+		<br/>
+		<a href="https://www.indivisibleguide.com/">The Guide</a>
 	</body>
 </html>
